--- a/src/Components/Content/Content.module.css
+++ b/src/Components/Content/Content.module.css
@@ -16,3 +16,20 @@
   width: 15%;
   background-color: #307435;
 }
+
+@media only screen and (max-width: 940px) {
+  .content_center {
+    width: 90%;
+    margin: 20px;
+  }
+
+  .content_left {
+    width: 5%;
+    background-color: transparent;
+  }
+
+  .content_right {
+    width: 5%;
+    background-color: transparent;
+  }
+}
