--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -7,7 +7,7 @@
   background-color: #dbd7cb;
 }
 .header img {
-  width: 600px;
+  max-width: 600px;
 }
 
 .header {
@@ -17,4 +17,20 @@
 .header_email {
   padding-right: 30px;
   font-size: 50px;
+}
+
+@media only screen and (max-width: 940px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: #dbd7cb;
+  }
+
+  .header_email {
+    padding-right: 30px;
+    font-size: 2rem;
+  }
 }
